--- a/index.html
+++ b/index.html
@@ -12,18 +12,37 @@
 
 
     var nombre="Sotoke";
-var number="2"; 
-var number1=3;
-var result=number+number1;
-var primernombre="johan";
-var segundonombre="Esteban";
-var result1=primernombre+" "+segundonombre;
+var num=2; 
+var num1=3;
+var num2=6;
+var num3=6;
+
+//compaRacion 
+var comparar=(num != num1); 
+ //condicionales
+ var respuesta = ""; 
+/* if ( num2 == num3 && num == num1 )
+ { 
+     respuesta="son iguales imbecil";
+
+}
+else{
+
+respuesta="no son iguales";
+}*/
+ // wariable wyale
+ var num5=10;
+
+ while(num5 <= 20){
+ document.getElementById("rest").innerHTML+= num5 +"-";
+
+num5 ++; 
+
+ }
 
 
 
-
-
-    document.getElementById("rest").innerHTML=result1;
+    
 
 
 </script>
