--- a/index.html
+++ b/index.html
@@ -10,35 +10,15 @@
 </p>
 <script>
 
+var imput= prompt("digite un numero ");
 
-    var nombre="Sotoke";
-var num=2; 
-var num1=3;
-var num2=6;
-var num3=6;
+ var respuesta= (imput*25);
+ 
+ document.getElementById("rest").innerHTML=respuesta;
 
-//compaRacion 
-var comparar=(num != num1); 
- //condicionales
- var respuesta = ""; 
-/* if ( num2 == num3 && num == num1 )
- { 
-     respuesta="son iguales imbecil";
 
-}
-else{
 
-respuesta="no son iguales";
-}*/
- // wariable wyale
- var num5=10;
-
- while(num5 <= 20){
- document.getElementById("rest").innerHTML+= num5 +"-";
-
-num5 ++; 
-
- }
+ 
 
 
 
