--- a/index.html
+++ b/index.html
@@ -10,11 +10,32 @@
 </p>
 <script>
 
-var imput= prompt("digite un numero ");
 
- var respuesta= (imput*25);
+
+var imput1= prompt("digite un numero1 ");
+
+
+var imput2= prompt("digite un numero2");
+
+var imput3= prompt("digite un numero3");
+
+var imput4= prompt("digite un numero4");
  
- document.getElementById("rest").innerHTML=respuesta;
+ var num1=parseInt(imput1)
+
+ var num2=parseInt(imput2)
+
+  var num3=parseInt(imput3)
+
+   var num4=parseInt(imput4)
+
+ var respuesta= (num1 + num2 + num3 + num4)/4;
+
+
+
+document.getElementById("rest").innerHTML=respuesta;
+
+ 
 
 
 
