--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
 
 
 
-var imput1= prompt("digite un numero1 ");
+var imput1= prompt("Radio del cilindro");
+
+var imput2= prompt("Altura del cilindro");
 
 
-var imput2= prompt("digite un numero2");
 
-var imput3= prompt("digite un numero3");
 
-var imput4= prompt("digite un numero4");
+
+
  
  var num1=parseInt(imput1)
+  var num2=parseInt(imput2)
 
- var num2=parseInt(imput2)
 
-  var num3=parseInt(imput3)
 
-   var num4=parseInt(imput4)
-
- var respuesta= (num1 + num2 + num3 + num4)/4;
-
+ var respuesta= 3.14*(num1*num1);
+var respuesta2="Gramos convertidos";
 
 
 document.getElementById("rest").innerHTML=respuesta;
